# backend/apps/weddings/views.py
@@ -1,4 +1,5 @@
 from drf_spectacular.utils import extend_schema
+from rest_framework import filters  # <-- Importe isto
 
 from apps.core.viewsets import BaseViewSet
 
@@ -19,3 +20,7 @@ class WeddingViewSet(BaseViewSet):
     queryset = Wedding.objects.all()
     serializer_class = WeddingSerializer
     service_class = WeddingService
+    filter_backends = [filters.SearchFilter, filters.OrderingFilter]
+    search_fields = ["groom_name", "bride_name", "location"]
+    ordering_fields = ["date", "created_at", "total_estimated"]
+    ordering = ["date"]
